# Edulib

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/edulib/toolkit/: filereader.py  textcleaner.py
